# akashic-template

./: .gitignore  Cargo.toml  README.md  game.json  package.json  rustfmt.toml
.cargo/: config
assets/script/: akashic.js  main.js
src/: main.rs
